basic filter docs
